# EmbedAtlas

./: .gitignore  README.md  pyproject.toml
embedatlas/: app.py  cli.py  config.py
embedatlas/core/: __init__.py  chunker.py  embedder.py  exporter.py  ingestion.py  rag.py  reduction.py  vectorstore.py
embedatlas/ui/: __init__.py  components.py  sidebar.py
embedatlas/ui/pages/: 01_ingest.py  02_embed.py  03_explore.py  04_search.py  __init__.py  pages
