[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "embedatlas"
version     = "0.1.0"
description = "The visual embedding workbench — ingest, embed, explore, search."
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

keywords = [
    "embeddings", "nlp", "rag", "semantic-search",
    "chromadb", "sentence-transformers", "umap", "tsne", "plotly",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── Core ML ──────────────────────────────────────────────────────
    "sentence-transformers>=3.0",
    "torch>=2.0",                        # CPU wheel by default

    # ── Vector store ──────────────────────────────────────────────────
    "chromadb>=0.5",

    # ── Chunking ──────────────────────────────────────────────────────
    "langchain-text-splitters>=0.2",

    # ── Dimensionality reduction ───────────────────────────────────────
    "scikit-learn>=1.4",
    "umap-learn>=0.5",

    # ── PDF parsing (lightweight default) ─────────────────────────────
    "pymupdf>=1.24",

    # ── HuggingFace ingestion ─────────────────────────────────────────
    "huggingface-hub>=0.23",
    "datasets>=2.19",

    # ── Visualisation ─────────────────────────────────────────────────
    "plotly>=5.22",

    # ── Frontend ──────────────────────────────────────────────────────
    "streamlit>=1.35",

    # ── Keyword / hybrid search ───────────────────────────────────────
    "rank-bm25>=0.2",

    # ── HTTP for URL ingestion ────────────────────────────────────────
    "requests>=2.31",

    # ── Data utils ───────────────────────────────────────────────────
    "pandas>=2.0",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# High-quality PDF parsing (large download ~500 MB)
docling = ["docling>=1.0"]

# GPU acceleration (install the right torch CUDA wheel separately)
gpu = ["torch>=2.0"]

# Development
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
embedatlas = "embedatlas.cli:main"

[project.urls]
Homepage   = "https://github.com/your-org/embedatlas"
Repository = "https://github.com/your-org/embedatlas"
Issues     = "https://github.com/your-org/embedatlas/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["embedatlas*"]

# ── Ruff (linting) ─────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]